fix wrong color

--- a/css/misc.css
+++ b/css/misc.css
@@ -1,3 +1,3 @@
 .highlight {
-    background-color: #c52e35;
+    background-color: #dedbe6;
     }
